==> Greg-R/magloop_pico_code_2/DisplayUtility/DisplayUtility.cpp <==
#include "DisplayUtility.h"

int DisplayUtility::DetectMaxSwitch()
{
  if (gpio_get(data.maxswitch) == LOW)
  {
    //  stepper.move(-300);
    //  stepper.runToPosition();
    for (int i = 0; i < 10; i++)
    {
      updateMessageTop("                  Upper Limit Hit!");
      busy_wait_ms(1000);
      tft.fillRect(90, 0, 300, 20, ILI9341_BLACK);
      busy_wait_ms(1000);
    }
    return 1;
  }
  return 0;
}

void DisplayUtility::PowerStepDdsCirRelay(bool stepperPower, uint32_t frequency, bool circuitPower, bool relayPower)
{
  // Power up versus power down sequence needs to be different so that receiver doesn't emit noise burst.
  // Going into AutoTune, turn on the stepper last.
  if (stepperPower & circuitPower)
  {
    gpio_put(data.OPAMPPOWER, circuitPower);
    gpio_put(data.RFAMPPOWER, circuitPower);
    gpio_put(data.RFRELAYPOWER, relayPower);
    // gpio_put(data.STEPPERSLEEPNOT, stepperPower); //  Deactivating the stepper driver is important to reduce RFI.
    if (stepperPower)
      uart_write_blocking(uart1, tmcstepper.tmcDriverPower(true), 8);
    else
      uart_write_blocking(uart1, tmcstepper.tmcDriverPower(false), 8);
  }
  // Coming out of AutoTune, turn off the stepper first.  Circuit power up to measure SWR after stepper is off.
  if ((not stepperPower) & circuitPower)
  {
    // gpio_put(data.STEPPERSLEEPNOT, stepperPower); //  Deactivating the stepper driver is important to reduce RFI.
    //if (stepperPower)
    //  uart_write_blocking(uart1, tmcstepper.tmcDriverPower(true), 8);
    //else
    // Turn off stepper driver.
      uart_write_blocking(uart1, tmcstepper.tmcDriverPower(false), 8);
    dds.SendFrequency(frequency);
    gpio_put(data.OPAMPPOWER, circuitPower);
    gpio_put(data.RFAMPPOWER, circuitPower);
    gpio_put(data.RFRELAYPOWER, relayPower);
  }
    // 
  if ((not stepperPower) & (not circuitPower))
  {
    // gpio_put(data.STEPPERSLEEPNOT, stepperPower); //  Deactivating the stepper driver is important to reduce RFI.
    if (stepperPower)
      uart_write_blocking(uart1, tmcstepper.tmcDriverPower(true), 8);
    else
      uart_write_blocking(uart1, tmcstepper.tmcDriverPower(false), 8);
    gpio_put(data.OPAMPPOWER, circuitPower);
    gpio_put(data.RFAMPPOWER, circuitPower);
    gpio_put(data.RFRELAYPOWER, relayPower);
  }
  // This case is for zeroing the stepper.
    if (stepperPower & not circuitPower)
  {
    // gpio_put(data.STEPPERSLEEPNOT, stepperPower); //  Deactivating the stepper driver is important to reduce RFI.
    if (stepperPower)
      uart_write_blocking(uart1, tmcstepper.tmcDriverPower(true), 8);
    else
      uart_write_blocking(uart1, tmcstepper.tmcDriverPower(false), 8);
  }

  // Power down the DDS or set frequency.
  // if (dds)
  dds.SendFrequency(frequency); // Redundant?
  //  Power down RF amplifier and SWR circuits.
  // gpio_put(data.OPAMPPOWER, circuitPower);
  // gpio_put(data.RFAMPPOWER, circuitPower);
  // gpio_put(data.RFRELAYPOWER, relayPower);
  busy_wait_ms(500); //  Wait for relay to switch and DDS to stabilize.
}
